2008-05-12  Tamas Nepusz  <ntamas@rmki.kfki.hu> :
	* src/foreign.c (igraph_read_graph_{ncol,lgl,pajek}) :
	proper error handling

	* examples/simple/igraph_read_graph_lgl : added test case
	
2008-04-30  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_shortest_paths_dijkstra) :
	bug corrected

	* src/type_indexedegelist.c (igraph_empty_attrs) :
	check that number of vertices is finite

2008-04-28  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/games.c (igraph_erdos_renyi_game_gnm) : bug corrected,
	no multiedges are generated now

	* src/random.c (igraph_random_sample_alga)
	(igraph_random_sample) : bugs corrected

	* src/structural_properties.c (igraph_is_mutual) : 
	changed order of arguments to be consistent with is_loop
	and is_multiple
	* interfaces/python/src/graphobject.c 
	(igraphmodule_Graph_is_mutual) : updated

	* src/vector.pmt (igraph_vector_binsearch2) :
	repair bug when vector is empty

2008-04-28  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/topology.c (igraph_isomorphic) : bugfix, closes issue #117
	
2008-04-27  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/graphobject.c
	(igraphmodule_Graph_is_mutual) : added

	* src/cocitation.c (igraph_similarity_inverse_log_weighted) : added

	* examples/simple/igraph_similarity.* : added test case for
	inverse log-weighted similarity

	* interfaces/python/src/graphobject.c
	(igraphmodule_Graph_similarity_inverse_log_weighted) : added

2008-04-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_is_mutual) : added

2008-04-24  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/foreign-graphml.c : fixed bug when a graph attribute was
	defined but its value not given in a GraphML file

2008-04-09  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/layout.c (igraph_reingold_tilford) :
	really fixed issue #100 :)
	* src/layout.c (igraph_reingold_tilford_circular) :
	fixed documentation and the handling of negative X coords
	